[tool.poetry]
name = "reporting-tool-poc"
version = "0.1.0"
description = ""
authors = ["Kollipara Tejkumar <tejkumar.kollipara@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
