[tool.poetry]
name = "lib"
version = "0.1.0"
description = ""
authors = ["Kollipara Tejkumar <tejkumar.kollipara@gmail.com>>"]

[tool.poetry.dependencies]
python = "^3.8"
pynamodb = "^5.0.3"
aws-lambda-powertools = "^1.14.0"
aws-requests-auth = "^0.4.3"
marshmallow = "<3"
structlog = "^20.2.0"
arrow = "^1.0.3"
pytz = "^2021.1"


[tool.poetry.dev-dependencies]
black = "^21.5b1"
flake8 = "^3.8.3"
cfn-lint = "^0.49.1"
moto = "^2.0.7"
pytest = "^6.2.4"
coverage = "^5.0.1"
mock = "4.0.3"
taskipy = "^1.8.1"
requests-mock = "^1.8.0"
Flask = "^1.1.2"

[tool.taskipy.tasks]

black = "black --check lib"
fmt = "black lib"

# NOTE: There are no CFN templates in this workflow, however
# we need a python virtualenv in which to run cfn-lint for
# the stuff in infra/.

cfn-lint = """
  echo 'NOTE: The lib workflow contains no CFN templates, however';
  echo '      we will use libs virtualenv to check infra/.';
  echo
  (for tmpl in $(grep -Rl '^AWSTemplateFormatVersion' ../../infra); do
    echo Validating $tmpl:
    cfn-lint $tmpl || exit
  done)
  """

flake8 = """flake8 \
  --max-line-length=88 \
  --count \
  --statistics \
  --exclude .git,__pycache__,.build \
  --per-file-ignores="__init__.py:F401" \
  .
  """

tests = """STAGE=localtest POWERTOOLS_TRACE_DISABLED=1 coverage run \
  --source . \
  -m \
  --branch \
  pytest -vv \
  && coverage report -m"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
